# language

./: .gitignore  LICENSE  README.md  pyproject.toml  theorynotes.md
language/_story/: __init__.py
language/_type/: __init__.py
language/analysis/: _analysis.py  analytic.py
language/calculus/: __init__.py  abstraction.py  application.py
language/category/: __init__.py  _category.py  arrow.py  arrows.py  composition.py  identity.py
language/connective/: _connective.py
language/decidable/: __init__.py
language/environment/: _environment.py
language/equivalence/: formation.py
language/ideal/: ideal.py
language/intuition/: __init__.py  _intuition.py  _intuitive.py
language/logic/: _logical.py  aterm2.py  condition.py  predicate.py
language/mechanics/: _mechanics.py
language/operator/: __init__.py  _operator.py  action.py  function.py
language/peace/: __init__.py
language/program/: _programmable.py
language/property/: _property.py
language/semantics/: _semantic.py
language/syntax/: _syntax.py  rule.py  term.py
language/type/: __init__.py  _type.py  subtyping.py  variance.py
language/variable/: __init__.py  _meta.py  _variable.py
reawon/_thing/: __init__.py  _thing.py
reawon/analysis/: __init__.py
reawon/category/: _category.py
reawon/ideal/: coherent.py  theory.py
reawon/logic/: _illogical.py  constructable.py
reawon/mechanics/: _mechanical.py
reawon/operator/: __init__.py  _operator.py
reawon/peace/: _coherence.py
reawon/type/: _typing.py  (+2 more)
think/: fractal-random.md  langnames.md  languages.rst  operators.md  paper.md
(+114 files in other folders)
