[tool.poetry]
name = "repository"
version = "0.1.0"
description = "Speccing concepts from type theory as a learning approach."
authors = ["jedhsu <jedhsu@pm.me>"]
readme = "README.md"
repository = "https://github.com/jedhsu/language"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
pytest = "^6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
